k8s/staging/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: mbinet-prod
spec:
  redirectScheme:
    scheme: https
    permanent: true
