k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbinet
  namespace: mbinet-prod
  labels:
    run: mbinet
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: mbinet
